# django_password_eye

./: MANIFEST.in  README.md  README.rst  pyproject.toml
django_password_eye/: apps.py  fields.py  widgets.py
django_password_eye/static/django_password_eye/css/: login.css
django_password_eye/static/django_password_eye/js/: django_password_eye.js  login.js
django_password_eye/templates/django_password_eye/: input.html
django_password_eye/templatetags/: password_eye_extras.py
tests/: test_fields.py  test_widgets.py
